<resources>
    <string name="app_name">AcouDigit</string>
    <string name="app_version_name">v2.0</string>
    <string name="app_full_name">AcouDigitWithLM</string>

    <string name="wave_player">wave player</string>
    <string name="choose_channel_out">choose a channel out : </string>
    <string name="wave_player_2">wave player : </string>
    <!--<string name="frequency">%1$d K Hz</string>-->

    <string name="recorder">recorder</string>
    <string name="choose_channel_in">choose a channel in : </string>
    <string name="mono">mono</string>
    <string name="stereo">stereo</string>
    <string name="record_wav">record wav : </string>
    <string name="start_both">start both</string>
    <string name="create_dir">create  directory</string>
    <string name="top_mic">top_mic</string>
    <string name="bottom_mic">bottom_mic</string>
    <string name="BeginHz">BeginHz</string>
    <string name="StepHz">StepHz</string>
    <string name="freqNum">freqNum</string>
    <string name="simpleRate">simpleRate</string>
    <string name="loadmodel">load model</string>>
    <string name="space">Space</string>>
    <string name="delete">Delete</string>>
    <string name="backspace">Backspace</string>>
    <string name="clear">Clear</string>>
    <string name="switchmodel">switch</string>



</resources>
