<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <SeekBar
        android:id="@+id/waverate_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/write_box"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:background="@drawable/edit_background"
        android:hint="Input Here">

    </EditText>

    <HorizontalScrollView
        android:id="@+id/word_basket"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/write_box"
        android:layout_width="match_parent"
        android:background="@drawable/edit_background2"
        android:layout_height="65dp">

        <LinearLayout
            android:id="@+id/ItemContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/input_func"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_char"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_one_button"
            android:layout_width="103dp"
            android:layout_height="65dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_background3"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="22sp" />

        <Button
            android:id="@+id/deletAll_button"
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_background3"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textSize="22sp" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_background3"
            android:text="@string/backspace"
            android:textAllCaps="false"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_char"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word_basket"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/switch_button"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/edit_background3"
            android:text="@string/switchmodel"
            android:textSize="22sp" />

        <Button
            android:id="@+id/blankspace_button"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_background3"
            android:text="@string/space"
            android:textAllCaps="false"
            android:textSize="22sp" />

        <Button
            android:id="@+id/comma_button"
            android:layout_width="70dp"
            android:layout_height="65dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_background3"
            android:text=","
            android:textSize="22sp" />

        <Button
            android:id="@+id/end_button"
            android:layout_width="70dp"
            android:layout_height="65dp"
            android:background="@drawable/edit_background3"
            android:text="."
            android:textSize="22sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_below="@+id/input_func"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/wave_player_tb"
            android:layout_width="99dp"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/recorder_tb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>